# Lap-LLM

./: .gitignore  README.md  chunking.md  curl_request.sh  get_hostInfo.sh  get_winInfo.ps1  next-steps.md  project_structure_plan.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
backend/application/: use_cases.py  vram_calculator.py
backend/domain/: entities.py  ports.py
backend/infrastructure/: langchain_integration.py  models.json  repositories.py  settings.py
backend/presentation/: adapters.py  api.py  dto.py
frontend/: Dockerfile  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api-conn/: requests.ts
frontend/src/layouts/: Layout.tsx
frontend/src/pages/: Hardware.tsx  Landing.tsx  terminos.tsx
